--- a/index.html
+++ b/index.html
@@ -61,23 +61,19 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex justify-content-center align-items-center">
     <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-      <h2></h2><br>
+      <!-- <h2></h2><br>
       <h1>ChotaMBA</h1>
       <br>
-      <h2>Unleashing Memory Powers with Effective Strategies</h2>
-      <br>
-        <a class='btn-get-started' href='service.html'>Teaching & Mentoring</a>
-        <a class='btn-get-started' href='service.html'>School Consulting</a>
-        <a class='btn-get-started' href='service.html'>Career Gromming</a>
-
-        <br><br><br>
+      <h2>Education is the adventure that never ends, always leading you to new discoveries.</h2>
+      <br> -->
+<!-- 
       <div class="social-links-hero text-center text-md-right pt-3 pt-md-0">
         <a class="mobilesOnly" href="tel:+91 702 046 7473"><i class="bx bx-phone-call hero-icon"></i></a>
         <a href="https://www.facebook.com/Foundationsuccess/" class="facebook"><i class="bx bxl-facebook hero-icon"></i></a>
         <a href="https://krishnawritting.blogspot.com/" class="blogger"><i class="bx bxl-blogger hero-icon"></i></a>
         <a href="https://wa.me/message/OWLUFBT336UEK1" class="whatsapp"><i class="bx bxl-whatsapp hero-icon"></i></a>
         <a href="https://www.youtube.com/channel/UCXY8BnFiUq3_lHp4Q_Hq7XA" class="youtube"><i class="bx bxl-youtube hero-icon"></i></a>
-      </div>
+      </div> -->
     </div>
 
     </div>
@@ -90,7 +86,7 @@
       <div class="container">
         <div class="row counters">
           <marquee>
-            Introducting To all new Online Videos for homeschoolers.
+            Education is the adventure that never ends, always leading you to new discoveries.
           </marquee>
         </div>    
       </div>
@@ -102,7 +98,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>About Us</p>
+          <p>CHOTA MBA INSTITUTION </p>
         </div>
 
         <div class="row">
@@ -110,15 +106,16 @@
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>SCCA</h3>
+            <h3><br>
+              (MASTER IN BRAIN ACTIVATION ) 
+              </h3>
             <p class="font-italic">
-              The Aim of SCCA is to provide world class education to the students to make them eligible for challenging and changing career prospact..
+              The aim of Chota MBA institution is to provide world class education to the students to make them eligible for challenging and changing career prospects. We are committed to provide  a unique one on one education system.
             </p>
             <ul>
               <li><i class="icofont-check-circled"></i>We're committed to providing world-class eduaction</li>
               <li><i class="icofont-check-circled"></i>With our unique one-on-one education system</li>
               <li><i class="icofont-check-circled"></i>Hundreds of different courses</li>
-              <li><i class="icofont-check-circled"></i>Video classes for homeschoolers</li>
             </ul>
             <a class='learn-more-btn' href='about.html'>Learn More</a>
           </div>
